--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Hou Ran / Personal Website"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://ranhou13.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl:                 : "" # the subpath of your site, e.g. "/blog"
-repository               : "humanrights/ranhou13.github.io"
+url: "https://ranhou13.github.io"
+baseurl: ""
+repository: "ranhou13/ranhou13.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
